--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -7,7 +7,7 @@
     <title><%= tituloWeb %></title>
 
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 
 <body>
